<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment

            android:name="com.google.ar.sceneform.ux.ArFragment"
            android:id="@+id/ARfragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="64dp"
            app:borderWidth="1dp"
            app:fabSize="normal"
            app:rippleColor="@android:color/holo_red_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/floating_action_button" />

        <TextView
            android:id="@+id/tvTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Tap Somewhere to get Started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/nnoNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_node_created_yet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_node"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_sphere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sphere" />

            <RadioButton
                android:id="@+id/cube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/cube" />

            <RadioButton
                android:id="@+id/radio_cylinder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/cylinder" />

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/placingInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_x_y_an_z_values_in_accordance_to_node_1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/connections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/mainX"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="X"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sphereY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/centerInCube" />

            <EditText
                android:id="@+id/mainY"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Y" />

            <EditText
                android:id="@+id/mainZ"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Z"
                android:inputType="numberDecimal" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/sphere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/radius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="Radius"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/centerInSphere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Center in (x,y,z) "
                    app:layout_constraintEnd_toEndOf="@+id/radius"
                    app:layout_constraintStart_toStartOf="@+id/radius"
                    app:layout_constraintTop_toBottomOf="@+id/radius" />

                <EditText
                    android:id="@+id/sphereX"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="X"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sphereY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/centerInSphere" />

                <EditText
                    android:id="@+id/sphereY"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Y"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toStartOf="@+id/sphereZ"
                    app:layout_constraintStart_toEndOf="@+id/sphereX"
                    app:layout_constraintTop_toTopOf="@+id/sphereX" />

                <EditText
                    android:id="@+id/sphereZ"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Z"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sphereY"
                    app:layout_constraintTop_toTopOf="@+id/sphereY" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cubeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/centerInCube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="157dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="156dp"
                    android:text="Center in (x,y,z) "
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/CubeCenterX"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="X"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/CubeCenterY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/centerInCube"
                    app:layout_constraintVertical_bias="0.071" />

                <EditText
                    android:id="@+id/CubeCenterY"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Y"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toStartOf="@+id/CubeCenterZ"
                    app:layout_constraintStart_toEndOf="@+id/CubeCenterX"
                    app:layout_constraintTop_toTopOf="@+id/CubeCenterX" />

                <EditText
                    android:id="@+id/CubeCenterZ"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Z"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/CubeCenterY"
                    app:layout_constraintTop_toTopOf="@+id/CubeCenterY" />

                <TextView
                    android:id="@+id/HeightInCube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="142dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="156dp"
                    android:text="Height in (X ,  Y ,Z)"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CubeCenterY" />

                <EditText
                    android:id="@+id/CubeHeightX"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="X"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/CubeHeightY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/HeightInCube" />

                <EditText
                    android:id="@+id/CubeHeightY"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Y"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toStartOf="@+id/CubeHeightZ"
                    app:layout_constraintStart_toEndOf="@+id/CubeHeightX"
                    app:layout_constraintTop_toTopOf="@+id/CubeHeightX" />

                <EditText
                    android:id="@+id/CubeHeightZ"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="Z"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/CubeHeightY"
                    app:layout_constraintTop_toTopOf="@+id/CubeHeightY" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cyllinderCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/cylinderRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="Radius"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/cylinderHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Height"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cylinderRadius" />

                <EditText
                    android:id="@+id/cylinderX"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="X"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cylinderHeight"
                    app:layout_constraintTop_toBottomOf="@+id/cylinderHeight" />

                <EditText
                    android:id="@+id/CylinderY"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="Y"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toEndOf="@+id/cylinderX"
                    app:layout_constraintTop_toTopOf="@+id/cylinderX" />

                <EditText
                    android:id="@+id/CylinderZ"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:hint="Z"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toEndOf="@+id/CylinderY"
                    app:layout_constraintTop_toTopOf="@+id/CylinderY" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Create Node" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>